2002-05-12 Craig Franklin <craigfranklin@attbi.com>
  * gputils 0.10.3 Released.

2002-04-27 Craig Franklin <craigfranklin@attbi.com>
  * Added Code Warrior changes. 

2002-04-09 Craig Franklin <craigfranklin@attbi.com>
  * Updated header files and linker scripts. 
  * Added manpages.

2002-04-08 Craig Franklin <craigfranklin@attbi.com>
  * Fixed error that could cause a seg fault on AmigaOS.
  
2002-04-03 Craig Franklin <craigfranklin@attbi.com>
  * gputils 0.10.2 Released.
  * Any argument to an instruction which exceeds its range will now generate
    at least a warning.
  * Bank warnings are now generated for access to register files that aren't 
    in bank 0.
  * Any goto or call which is to a page other than the current page will now
    generate a page warning.
  * Added --force-list option, so gpasm will ignore nolist directives.
  * The default values for hex format, radix, and warning level are now 
    displayed.
  * Added description of the alternative number formats to documents. 
  
2002-02-28 Craig Franklin <craigfranklin@attbi.com>
  * Fixed a bug that inserted an extra NULL line in a macro definition when +=
    type ops are used.  The bug caused a seg fault.

2002-02-23 Craig Franklin <craigfranklin@attbi.com>
  * gputils 0.10.1 Released.

2002-02-23 Craig Franklin <craigfranklin@attbi.com>
  * Macros are now implemented as a text substitution at the input to the 
    lexer.  All macro arguments are preprocessor substitutions like #define.
  * Fixed a bug that caused i = i + 1 type expressions to be evaluated twice
    in macros.
  * Include statements now appear before the body of the file in the listing.
  * Macro calls now appear before the body of the macro in the listing.
  * Fixed a bug that allowed #defines in the body of a macro to be processed 
    during the macro definition.
  * "fill (<expression>),number", equ, and various other commands now work in
    macros.